Added some more tests